[gd_scene load_steps=4 format=3 uid="uid://cfocn7rvh5kjq"]

[ext_resource type="Texture2D" uid="uid://bc26ruaqc8hhq" path="res://assets/tempor치rio.png" id="1_3vyb7"]
[ext_resource type="Script" uid="uid://7ehx3dxa468b" path="res://scripts/player.gd" id="1_g2els"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qhqgy"]
size = Vector2(14, 26)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_g2els")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_3vyb7")

[node name="colision" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_qhqgy")

[node name="Timer_pulo_vari치vel" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="Timer_jump_buffer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Coiote_timer" type="Timer" parent="."]

[connection signal="timeout" from="Timer_pulo_vari치vel" to="." method="_on_timer_pulo_vari치vel_timeout"]
[connection signal="timeout" from="Timer_jump_buffer" to="." method="_on_timer_jump_buffer_timeout"]
[connection signal="timeout" from="Coiote_timer" to="." method="_on_coiote_timer_timeout"]
